行为树代码优化